# claude-telegram-relay

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.e2e.md  CLAUDE.md  CLAUDE.setup.md  DECISIONS.md  README.md  ecosystem.config.cjs  ecosystem.config.example.cjs  ecosystem.config.example.js  package-lock.json  package.json  relay-wrapper.js  tsconfig.json
.claude/: DECISIONS.md  settings.json
config/: agents.example.json  agents.json  auto-approve.default.json  models.example.json  models.json  observability.ts  routines.config.json  routines.user.example.json
db/: schema.sql
docs/: ADDING-NEW-JOBS.md  FALLBACK.md  PM2-SETUP.md  ROUTINES_USER_JOURNEY.md  SERVICE-STATUS.md  WATCHDOG.md  WEATHER_INTEGRATION.md  WEATHER_QUICK_REFERENCE.md  WEATHER_UPDATE_SUMMARY.md  architecture.md  chat-groups.md  claude-skills-reference.md  features-job-queue.md  memory-system-user-guide.md  memory-system.md  mlx-local-inference.md  model-registry.md  nlah-harness.md  observability.md  prompt_builder.md  routines-system.md  testing-job-queue.md  tro-e2e-test-guide.md  user-guide.md  weather.md
examples/: ETF-ANALYSIS-README.md  morning-briefing-etf.ts  morning-briefing.ts  night-summary.ts  smart-checkin.ts
integrations/: claude.md  obsidian.md  osx-calendar.md  osx-notes.md  outlook.md  telegram.md  things.md  weather.md
routines/: CLAUDE.md  attachment-gc.test.ts  aws-daily-cost.ts  enhanced-morning-summary.ts  etf-52week-screener.test.ts  etf-52week-screener.ts  log-cleanup.ts  (+25 more)
tools/mlx-local/: pyproject.toml
tools/mlx-local/mlx_local/: __init__.py  cli.py  server.py
(+548 files in other folders)
